View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026791 | Open CASCADE | OCCT:Visualization | public | 2015-10-21 09:25 | 2021-08-24 14:26 |
Reporter | kgv | Assigned To | kgv | ||
Priority | low | Severity | feature | ||
Status | assigned | Resolution | open | ||
Target Version | 7.7.0 | ||||
Summary | 0026791: Visualization, TKOpenGl - apply view resolution to built-in markers | ||||
Description | Standard markers can be automatically computed with greater resolution on HiDPI monitors. | ||||
Steps To Reproduce | bugs vis bug26791 | ||||
Tags | No tags attached. | ||||
Test case number | |||||
related to | 0031705 | closed | bugmaster | Open CASCADE | Visualization - move out construction of predefined markers from OpenGl_AspectsSprite to Graphic3d_MarkerImage |
related to | 0027731 | closed | bugmaster | Open CASCADE | Visualization, OpenGl_AspectMarker - handle fractional marker Scale when sharing resources |
child of | 0025350 | closed | bugmaster | Community | Visualization - provide a dpi-scaling ratio for V3d_View |
|
Branch CR26791 has been created by isk. SHA-1: b9b37c1d45a06c976b593971fa1f05143c930bc6 Detailed log of new commits: Author: isk Date: Wed Nov 11 10:46:48 2015 +0300 0026791: Visualization, TKOpenGl - apply view resolution to built-in markers Add ResolutionRatio() method in the Graphic3d_RenderingParams. Add SetResolutionRatio() method in the OpenGl_Context. |
|
Dear Kirill, please review the branch CR26791. |
|
bug24131_markers_sprites.png (32,728 bytes) |
|
Please note that increasing resolution should have another effect that currently provided by changing marker size. It should be rendered with higher quality (e.g. with more pixels) preserving original shape at the same size (size from aspect). For instance, lines within marker should have higher thickness (better within integer steps). At the same time, the resolution should have no effect on custom markers - them should be rendered as is. |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-10-21 09:25 | kgv | New Issue | |
2015-10-21 09:25 | kgv | Assigned To | => kgv |
2015-10-21 09:25 | kgv | Relationship added | child of 0025350 |
2015-10-21 09:26 | kgv | Assigned To | kgv => isk |
2015-10-21 09:26 | kgv | Status | new => assigned |
2015-10-21 09:26 | kgv | Target Version | 7.0.0 => 7.1.0 |
2015-11-11 10:47 | git | Note Added: 0048042 | |
2015-11-11 10:48 |
|
Note Added: 0048043 | |
2015-11-11 10:48 |
|
Assigned To | isk => kgv |
2015-11-11 10:48 |
|
Status | assigned => resolved |
2015-11-11 10:48 |
|
Steps to Reproduce Updated | |
2015-11-11 11:02 | kgv | File Added: bug24131_markers_sprites.png | |
2015-11-11 11:05 | kgv | Note Added: 0048046 | |
2015-11-11 11:05 | kgv | Assigned To | kgv => isk |
2015-11-11 11:05 | kgv | Status | resolved => assigned |
2015-11-11 11:06 | kgv | Note Edited: 0048046 | |
2016-08-06 13:04 | kgv | Relationship added | related to 0027731 |
2016-08-06 13:04 | kgv | Assigned To | isk => kgv |
2016-08-06 13:04 | kgv | Priority | normal => low |
2016-10-25 09:33 | kgv | Target Version | 7.1.0 => 7.2.0 |
2017-07-20 10:50 | kgv | Target Version | 7.2.0 => 7.4.0 |
2019-08-13 12:04 | kgv | Target Version | 7.4.0 => 7.5.0 |
2020-08-28 16:31 | kgv | Target Version | 7.5.0 => 7.6.0 |
2020-12-14 17:15 | kgv | Relationship added | related to 0031705 |
2021-08-24 14:26 | kgv | Target Version | 7.6.0 => 7.7.0 |