0026791: Visualization, TKOpenGl - apply view resolution to built-in markers Add ResolutionRatio() method in the Graphic3d_RenderingParams. Add SetResolutionRatio() method in the OpenGl_Context.